# Foreman

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
demo/: DEMO.md  run_demo.py  seed_sales.py  verify_local.py
docker/: Dockerfile
docs/images/: README.md
foreman/: cli.py
foreman/agents/: __init__.py  analyst.py  base.py  researcher.py  reviewer.py  supervisor.py  writer.py
foreman/api/: __init__.py  app.py
foreman/config/: __init__.py
foreman/graph/: __init__.py  builder.py  state.py
foreman/hitl/: __init__.py  policy.py  queue.py  runner.py
foreman/llm/: __init__.py  base.py  providers.py  retry.py  router.py
foreman/memory/: __init__.py  embeddings.py  factory.py  store.py
foreman/observability/: __init__.py  cost.py  exporter.py  instrument.py  replay.py  semconv.py  store.py  tracer.py
foreman/schemas/: __init__.py
foreman/storage/: __init__.py  db.py  factory.py
foreman/tools/: __init__.py  api_call.py  base.py  code_exec.py  database.py  factory.py  files.py  limits.py  net.py  registry.py  web_search.py
foreman/ui/: __init__.py  console.py  console_wiring.py  explorer.py  explorer_wiring.py  review.py  wiring.py
foreman/workers/: __init__.py  celery_app.py  tasks.py
scripts/: demo.sh
tests/: conftest.py  support.py
tests/e2e/: test_full_slice.py  test_hitl_loop.py  test_memory_loop.py  test_observability.py  test_showcase.py
tests/integration/: test_api.py  test_approval_resume.py  test_full_crew.py  test_graph_stub.py  test_memory_recall.py  (+5 more)
(+25 files in other folders)
