[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foreman"
version = "0.1.0"
description = "Multi-agent orchestration platform with tool use, memory, and human-in-the-loop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "openai>=1.40",
    "anthropic>=0.34",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tavily-python>=0.5",
    "chromadb>=0.5",
    "langgraph-checkpoint-sqlite>=2.0",
    "opentelemetry-sdk>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]
ui = [
    "streamlit>=1.30",
]

[project.scripts]
foreman = "foreman.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["foreman"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_docker: needs a working Docker daemon (run under docker-compose)",
    "requires_postgres: needs a Postgres instance",
    "requires_redis: needs a Redis instance",
]
